[TEST] Add unit tests for PlotSquaredProtection, update Paper API dependencies, and streamline list conversions.
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>